Name:               cabal-install-bundle
Version:            0.14.0
Synopsis:           The (bundled) command-line interface for Cabal and Hackage.
Maintainer:         paczesiowa@gmail.com
Category:           Distribution
build-type:         Configure
Cabal-Version:      >= 1.8
extra-tmp-files:
  config.log config.status autom4te.cache network.buildinfo
  include/HsNetworkConfig.h
extra-source-files:
  config.guess config.sub install-sh
  configure.ac configure network.buildinfo.in
  include/HsNetworkConfig.h.in include/HsNet.h
  -- C sources only used on some systems
  cbits/ancilData.c cbits/asyncAccept.c cbits/initWinSock.c
  cbits/winSockErr.c

Executable cabal
    Main-Is:            Main.hs
    ghc-options:        -Wall
    include-dirs: include
    includes: HsNet.h
    install-includes: HsNet.h HsNetworkConfig.h
    c-sources: cbits/HsNet.c
    Other-Modules:
        Network
        Network.BSD
        Network.Socket
        Network.Socket.ByteString
        Network.Socket.ByteString.Lazy
        Network.Socket.Internal
        Network.URI
        Network.Socket.ByteString.Internal
        Network.Socket.ByteString.IOVec
        Network.Socket.ByteString.MsgHdr        
        Distribution.Client.BuildReports.Anonymous
        Distribution.Client.BuildReports.Storage
        Distribution.Client.BuildReports.Types
        Distribution.Client.BuildReports.Upload
        Distribution.Client.Check
        Distribution.Client.Config
        Distribution.Client.Configure
        Distribution.Client.Dependency
        Distribution.Client.Dependency.TopDown
        Distribution.Client.Dependency.TopDown.Constraints
        Distribution.Client.Dependency.TopDown.Types
        Distribution.Client.Dependency.Types
        Distribution.Client.Dependency.Modular
        Distribution.Client.Dependency.Modular.Assignment
        Distribution.Client.Dependency.Modular.Builder
        Distribution.Client.Dependency.Modular.Configured
        Distribution.Client.Dependency.Modular.ConfiguredConversion
        Distribution.Client.Dependency.Modular.Dependency
        Distribution.Client.Dependency.Modular.Explore
        Distribution.Client.Dependency.Modular.Flag
        Distribution.Client.Dependency.Modular.Index
        Distribution.Client.Dependency.Modular.IndexConversion
        Distribution.Client.Dependency.Modular.Log
        Distribution.Client.Dependency.Modular.Message
        Distribution.Client.Dependency.Modular.Package
        Distribution.Client.Dependency.Modular.Preference
        Distribution.Client.Dependency.Modular.PSQ
        Distribution.Client.Dependency.Modular.Solver
        Distribution.Client.Dependency.Modular.Tree
        Distribution.Client.Dependency.Modular.Validate
        Distribution.Client.Dependency.Modular.Version
        Distribution.Client.Fetch
        Distribution.Client.FetchUtils
        Distribution.Client.GZipUtils
        Distribution.Client.Haddock
        Distribution.Client.HttpUtils
        Distribution.Client.IndexUtils
        Distribution.Client.Init
        Distribution.Client.Init.Heuristics
        Distribution.Client.Init.Licenses
        Distribution.Client.Init.Types
        Distribution.Client.Install
        Distribution.Client.InstallPlan
        Distribution.Client.InstallSymlink
        Distribution.Client.List
        Distribution.Client.PackageIndex
        Distribution.Client.PackageUtils
        Distribution.Client.Setup
        Distribution.Client.SetupWrapper
        Distribution.Client.SrcDist
        Distribution.Client.Tar
        Distribution.Client.Targets
        Distribution.Client.Types
        Distribution.Client.Unpack
        Distribution.Client.Update
        Distribution.Client.Upload
        Distribution.Client.Utils
        Distribution.Client.World
        Distribution.Client.Win32SelfUpgrade
        Distribution.Compat.Exception
        Distribution.Compat.FilePerms
        Paths_cabal_install_bundle

    build-depends: base, Cabal, filepath, time, process, directory, pretty, containers, array, old-time, bytestring, unix

    extensions: CPP, DeriveDataTypeable, ForeignFunctionInterface, TypeSynonymInstances
